--- a/frontend/index.html
+++ b/frontend/index.html
@@ -165,7 +165,7 @@
                                             <p class="card-text offs-text-name text-monospace">Caqui Fuyu Orgânico</p>
                                             <div class="card-text text-muted"><s>De: R$ 19,99</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ 16,99</b><small> à vista</small></h5>
-                                            <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
+                                            <button class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Continuar</button>
                                           </div>
                                         </div>
 
@@ -179,7 +179,7 @@
                                             <p class="card-text offs-text-name text-monospace">Cenoura DeBruin Orgânica</p>
                                             <div class="card-text text-muted"><s>De: R$ 4,99</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ 3,99</b> <small> à vista</small></h5>
-                                            <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
+                                            <button class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Continuar</button>
                                           </div>
                                         </div>
                                     </div>
@@ -192,7 +192,7 @@
                                             <p class="card-text offs-text-name text-monospace">Cebola Chooury Orgânica</p>
                                             <div class="card-text text-muted"><s>De: R$ 6,29</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ 5,99</b> <small> à vista</small></h5>
-                                            <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
+                                            <button class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Continuar</button>
                                           </div>
                                         </div>
                                     </div>
@@ -211,7 +211,7 @@
                                           <p class="card-text offs-text-name text-monospace">Pimentão Restib Orgânico</p>
                                             <div class="card-text text-muted"><s>De: R$ 3,59</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ 2,99</b> <small> à vista</small></h5>
-                                            <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
+                                            <button class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Continuar</button>
                                         </div>
                                       </div>
                                   </div>
@@ -224,7 +224,7 @@
                                         <p class="card-text offs-text-name text-monospace">Laranja Umbigo Orgânica</p>
                                             <div class="card-text text-muted"><s>De: R$ 35,99</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ 33,99</b> <small> à vista</small></h5>
-                                            <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
+                                            <button class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Continuar</button>
                                       </div>
                                     </div>
                                 </div>
@@ -237,7 +237,7 @@
                                       <p class="card-text offs-text-name text-monospace">Repolho Verde Orgânico</p>
                                       <div class="card-text text-muted"><s>De: R$ 7,99</s> por:</div>
                                       <h5 class="text-success mb-2"><b>R$ 7,35</b> <small> à vista</small></h5>
-                                      <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
+                                      <button class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Continuar</button>
                                     </div>
                                   </div>
                               </div>
@@ -256,7 +256,7 @@
                                             <p class="card-text offs-text-name text-monospace">Tomate Orgânico</p>
                                             <div class="card-text text-muted"><s>De: R$ 6,99</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ R$ 6,29</b> <small> à vista</small></h5>
-                                            <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
+                                            <button class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Continuar</button>
                                           </div>
                                         </div>
                                     </div>
@@ -269,7 +269,7 @@
                                           <p class="card-text offs-text-name text-monospace">Batata Orgânica</p>
                                           <div class="card-text text-muted"><s>De: R$ 6,99</s> por:</div>
                                           <h5 class="text-success mb-2"><b>R$ R$ 5,69</b> <small> à vista</small></h5>
-                                          <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
+                                          <button class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Continuar</button>
                                         </div>
                                       </div>
                                     </div>
@@ -282,7 +282,7 @@
                                             <p class="card-text offs-text-name text-monospace">Banana da Prata</p>
                                             <div class="card-text text-muted"><s>De: R$ 9,99</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ 8,99</b> <small> à vista</small></h5>
-                                            <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
+                                            <button class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Continuar</button>
                                           </div>
                                         </div>
                                     </div>
@@ -310,10 +310,10 @@
                 <p class="card-text offs-text-name text-monospace">Batatas</p>
                 <h5 class="text-success mb-2"><b>R$ 8,99</b> <small> à vista</small></h5>
                 <div class="btn-group" role="group" aria-label="Exemplo básico">
-                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
-                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos1', 'sub');">-</button>
+                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
+                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos1', 'sub');">-</button>
                   <input id="btnMaisVendidos1" type="number" class="form-control text-center w-25" value="1">
-                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos1', 'sum');">+</button>
+                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos1', 'sum');">+</button>
                 </div>
               </div>
           </div>
@@ -324,10 +324,10 @@
                 <p class="card-text offs-text-name text-monospace">Batatas</p>
                 <h5 class="text-success mb-2"><b>R$ 8,99</b> <small> à vista</small></h5>
                 <div class="btn-group" role="group" aria-label="Exemplo básico">
-                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
-                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos2', 'sub');">-</button>
+                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
+                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos2', 'sub');">-</button>
                   <input id="btnMaisVendidos2" type="number" class="form-control text-center w-25" value="1">
-                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos2', 'sum');">+</button>
+                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos2', 'sum');">+</button>
                 </div>
             </div>
           </div>
@@ -338,10 +338,10 @@
               <p class="card-text offs-text-name text-monospace">Batatas</p>
               <h5 class="text-success mb-2"><b>R$ 8,99</b> <small> à vista</small></h5>
               <div class="btn-group" role="group" aria-label="Exemplo básico">
-                <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
-                <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos3', 'sub');">-</button>
+                <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
+                <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos3', 'sub');">-</button>
                 <input id="btnMaisVendidos3" type="number" class="form-control text-center w-25" value="1">
-                <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos3', 'sum');">+</button>
+                <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos3', 'sum');">+</button>
               </div>
             </div>
           </div>
@@ -352,10 +352,10 @@
                 <p class="card-text offs-text-name text-monospace">Cebolas</p>
                 <h5 class="text-success mb-2"><b>R$ 9,99</b> <small> à vista</small></h5>
                 <div class="btn-group" role="group" aria-label="Exemplo básico">
-                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
-                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos4', 'sub');">-</button>
+                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
+                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos4', 'sub');">-</button>
                   <input id="btnMaisVendidos4" type="number" class="form-control text-center w-25" value="1">
-                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos4', 'sum');">+</button>
+                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos4', 'sum');">+</button>
                 </div>
               </div>
           </div>
@@ -366,10 +366,10 @@
                 <p class="card-text offs-text-name text-monospace">Caqui</p>
                 <h5 class="text-success mb-2"><b>R$ 18,99</b> <small> à vista</small></h5>
                 <div class="btn-group" role="group" aria-label="Exemplo básico">
-                    <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
-                    <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos5', 'sub');">-</button>
+                    <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
+                    <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos5', 'sub');">-</button>
                     <input id="btnMaisVendidos5" type="number" class="form-control text-center w-25" value="1">
-                    <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos5', 'sum');">+</button>
+                    <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos5', 'sum');">+</button>
                   </div>
               </div>
           </div>
@@ -380,10 +380,10 @@
               <p class="card-text offs-text-name text-monospace">Caqui</p>
               <h5 class="text-success mb-2"><b>R$ 18,99</b> <small> à vista</small></h5>
               <div class="btn-group" role="group" aria-label="Exemplo básico">
-                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
-                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos6', 'sub');">-</button>
+                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
+                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos6', 'sub');">-</button>
                   <input id="btnMaisVendidos6" type="number" class="form-control text-center w-25" value="1">
-                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos6', 'sum');">+</button>
+                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos6', 'sum');">+</button>
                 </div>
             </div>
           </div>
@@ -399,13 +399,13 @@
       <div class="container-fluid">
         <div class="produtos d-flex">
           <div class="card" style="width: 18rem;">
-              <a href="/frontend/produtos-detalhes.html">
+              <a href="produtos_detalhes.html">
                 <img class="card-img-top news-img"src="img/itens/soja.jpg" alt="Livros em promoção">
               </a>
                <div class="card-body">
                   <p class="card-text offs-text-name text-monospace">Soja em grãos 500g</p>
                   <h5 class="text-success mb-2"><b>R$ 18,99</b> <small> à vista</small></h5>
-                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100">Comprar</button>
+                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100">Comprar</button>
                 </div>
             </div>
   
@@ -415,7 +415,7 @@
               <div class="card-body">
                   <p class="card-text offs-text-name text-monospace">Aveia em flocos 500g</p>
                   <h5 class="text-success mb-2"><b>R$ 8,89</b> <small> à vista</small></h5>
-                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100">Comprar</button>
+                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100">Comprar</button>
               </div>
             </div>
   
@@ -424,7 +424,7 @@
               <div class="card-body">
                 <p class="card-text offs-text-name text-monospace">Feijão carioca 500g</p>
                 <h5 class="text-success mb-2"><b>R$ 6,39</b> <small> à vista</small></h5>
-                <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100">Comprar</button>
+                <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100">Comprar</button>
               </div>
             </div>
     
@@ -433,7 +433,7 @@
                 <div class="card-body">
                   <p class="card-text offs-text-name text-monospace">Quinoa 500g</p>
                   <h5 class="text-success mb-2"><b>R$ 5,89</b> <small> à vista</small></h5>
-                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100">Comprar</button>                  
+                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100">Comprar</button>                  
                 </div>
             </div>
     
@@ -442,7 +442,7 @@
                 <div class="card-body">
                   <p class="card-text offs-text-name text-monospace">Tapioca 500g</p>
                   <h5 class="text-success mb-2"><b>R$ 3,59</b> <small> à vista</small></h5>
-                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100">Comprar</button>
+                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100">Comprar</button>
                 </div>
             </div>
            </div>
