--- a/frontend/minhas_compras.html
+++ b/frontend/minhas_compras.html
@@ -166,8 +166,8 @@
 
                     </div>
                     <div class="col-md-5">
-                      <a href="avaliar-compras.html" class="btn btn-teal my-account-btn">Avaliar compra</a>
-                      <a href="rastrear-compras.html" class="btn btn-teal my-account-btn">Rastrear compra</a>
+                      <a href="avaliar_compras.html" class="btn btn-teal my-account-btn">Avaliar compra</a>
+                      <a href="rastrear_compras.html" class="btn btn-teal my-account-btn">Rastrear compra</a>
                       <a href="#" class="btn btn-teal my-account-btn">Comprar novamente</a>
                     </div>
                 </div>
@@ -222,8 +222,8 @@
 
                   </div>
                   <div class="col-md-5">
-                    <a href="avaliar-compras.html" class="btn btn-teal my-account-btn">Avaliar compra</a>
-                    <a href="rastrear-compras.html" class="btn btn-teal my-account-btn">Rastrear compra</a>
+                    <a href="avaliar_compras.html" class="btn btn-teal my-account-btn">Avaliar compra</a>
+                    <a href="rastrear_compras.html" class="btn btn-teal my-account-btn">Rastrear compra</a>
                     <a href="#" class="btn btn-teal my-account-btn">Comprar novamente</a>
                   </div>
               </div>
