--- a/frontend/rastrear_compras.html
+++ b/frontend/rastrear_compras.html
@@ -114,7 +114,7 @@
         </li>
         <li> > </li>
         <li>
-          <a class="menuLink" href="minhas-compras.html"> Minha compras</a>
+          <a class="menuLink" href="minhas_compras.html"> Minha compras</a>
         </li>  
         <li> > </li>
         <li>
