--- a/frontend/editar_dados_usr.html
+++ b/frontend/editar_dados_usr.html
@@ -139,7 +139,7 @@
             </div>
           </div>
           <div class="form-group">
-            <a href="#" class="btn btn-success w-100 mb-3">Continuar</a>
+            <a href="#" class="btn btn-success w-100 mb-3">Alterar registros</a>
           </div>
         </form>
       </div>
