--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,11 +59,10 @@
                 <div class="single category">
                   <h3 class="side-title">Categorias</h3>
                   <ul class="list-group">
-                    <li><a href="" title="">Frutas <span class="pull-right">13</span></a></li>
-                    <li><a href="" title="">Legumes <span class="pull-right">30</span></a></li>
-                    <li><a href="" title="">Folhas <span class="pull-right">13</span></a></li>
-                    <li><a href="" title="">Folhas para Chás <span class="pull-right">13</span></a></li>
-                    <li><a href="" title="">Sementes <span class="pull-right">13</span></a></li>
+                    <li><a href="/frontend/produtos.html" title="">Hortifruti Orgânico <span class="pull-right">30</span></a></li>
+                    <li><a href="" title="">Mercearia Orgânica <span class="pull-right">13</span></a></li>
+                    <li><a href="" title="">Bebidas Orgânicas <span class="pull-right">13</span></a></li>
+                    <li><a href="" title="">Congelados Orgânicos <span class="pull-right">13</span></a></li>
                   </ul>
                 </div>
               </div> 
