--- a/frontend/minhas_compras.html
+++ b/frontend/minhas_compras.html
@@ -108,15 +108,17 @@
 
     
     <!--MENU FIXO-->
-    <ul class="menu">
+    <div class="container" style="margin-left: 15%;">
+      <ul class="menu">
         <li class="">
           <a class="menuLink" href="minha_conta.html">Minha conta</a>
         </li>
         <li> > </li>
         <li>
-          <a class="menuLink likAtivo" href="#"> Minha compras</a>
+          <a class="menuLink likAtivo" href="#"> Minhas compras</a>
         </li>    
-    </ul>
+      </ul>
+    </div>
 
       
     <!--compra -->
@@ -179,7 +181,7 @@
     <div class="container">
       <div class="card" style="margin-top: 50px">
           <div class="row">
-              <p class="text-compras">Compra Nº 0052</p>
+              <p class="text-compras text-color text-monospace">Compra Nº 0052</p>
           </div>
           <div class="card-body">
               <div class="row align-compras">
