--- a/frontend/avaliar_compras.html
+++ b/frontend/avaliar_compras.html
@@ -116,7 +116,7 @@
         </li>
         <li> > </li>
         <li class="">
-          <a class="menuLink" href="#">Minhas compras</a>
+          <a class="menuLink" href="minhas_compras.html">Minhas compras</a>
         </li>
         <li> > </li>
         <li>
@@ -152,7 +152,7 @@
     <!-- FOOTER -->
     <footer class="text-center text-white">
       <!-- Copyright -->
-      <div class="text-center p-3 footer bg-salmao-dark" style="margin-top: 225px;">
+      <div class="text-center p-3 footer bg-salmao-dark">
         © 2021 Copyright: Legumes Preciosos
         <br>
         Linguagem de Programação III - Jéssica Rocha, Ludmila Brito e Filipe Silva
